--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "PunkApiStore",
+  "name": "react-native-punk-api-store",
   "version": "0.0.1",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,8 +11,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.23.0",
+    "react-native-svg": "^13.10.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -19,18 +32,27 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@testing-library/react-native": "^12.1.3",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
+  },
+  "moduleNameMapper": {
+    "\\.(svg)$": "<rootDir>/__mocks__/svg.js"
   }
 }
